dodano HttpClient i asynchroniczne pobieranie informacji o streamerach (#4)